# Hachimi

./: .gitignore  .gitmodules  Cargo.toml  README-zh_cn.md  README-zh_tw.md  README.md  build.rs
assets/locales/: en.yml  vi.yml  zh-cn.yml  zh-tw.yml
src/: lib.rs
src/android/: ffi.rs  game_impl.rs  hachimi_impl.rs  hook.rs  interceptor_impl.rs  log_impl.rs  main.rs  mod.rs  symbols_impl.rs  utils.rs
src/android/gui_impl/: input_hook.rs  keymap.rs  mod.rs  render_hook.rs
src/android/zygisk/: internal.rs  main.rs  mod.rs
src/core/: bindings.rs  error.rs  ext.rs  game.rs  gui.rs  hachimi.rs  http.rs  interceptor.rs  ipc.rs  log.rs  mod.rs  plugin_api.rs  plurals.rs  sql.rs  sugoi_client.rs  template.rs  template_filters.rs  tl_repo.rs  utils.rs
src/il2cpp/: api.rs  bindings.rs  error.rs  ext.rs  mod.rs  sql.rs  symbols.rs  types.rs  utils.rs
src/il2cpp/hook/: mod.rs
src/il2cpp/hook/Cute_Core_Assembly/: Device.rs  SafetyNet.rs  mod.rs
src/il2cpp/hook/Cute_Cri_Assembly/: MovieManager.rs  mod.rs
src/il2cpp/hook/Cute_UI_Assembly/: AtlasReference.rs  mod.rs
src/il2cpp/hook/DOTween/: TweenManager.rs  mod.rs
src/il2cpp/hook/LibNative_Runtime/: mod.rs
src/il2cpp/hook/LibNative_Runtime/Sqlite3/: Connection.rs  PreparedQuery.rs  Query.rs  mod.rs
src/il2cpp/hook/Plugins/: mod.rs
src/il2cpp/hook/Plugins/AnimateToUnity/: AnGlobalData.rs  AnMeshInfoParameterGroup.rs  AnMeshParameter.rs  AnMeshParameterGroup.rs  AnMotionParameter.rs  AnMotionParameterGroup.rs  AnObjectParameterBase.rs  AnRoot.rs  AnRootParameter.rs  AnText.rs  AnTextParameter.rs  mod.rs
src/il2cpp/hook/UnityEngine_AssetBundleModule/: AssetBundle.rs  AssetBundleRequest.rs  mod.rs
src/il2cpp/hook/UnityEngine_CoreModule/: Application.rs  AsyncOperation.rs  Behaviour.rs  Component.rs  GameObject.rs  Graphics.rs  Material.rs  Object.rs  QualitySettings.rs  RenderTexture.rs  Resources.rs  Screen.rs  Sprite.rs  Texture.rs  Texture2D.rs  mod.rs
src/il2cpp/hook/UnityEngine_ImageConversionModule/: ImageConversion.rs  mod.rs
src/il2cpp/hook/UnityEngine_TextRenderingModule/: Font.rs  TextGenerator.rs  mod.rs
src/il2cpp/hook/UnityEngine_UI/: CanvasScaler.rs  Text.rs  mod.rs
src/il2cpp/hook/UnityEngine_UIModule/: Canvas.rs  mod.rs
src/il2cpp/hook/Unity_TextMeshPro/: TMP_FontAsset.rs  TMP_Text.rs  mod.rs
src/il2cpp/hook/mscorlib/: ArrayList.rs  Byte.rs  Enum.rs  File.rs  mod.rs
src/il2cpp/hook/umamusume/: ApplicationSettingSaveLoader.rs  ButtonCommon.rs  CameraController.rs  CharacterNoteTopView.rs  CharacterNoteTopViewController.rs  CySpringController.rs  DialogRaceOrientation.rs  FlashActionPlayer.rs  GallopUtil.rs  GameSystem.rs  GraphicSettings.rs  JikkyoDisplay.rs  LiveTheaterCharaSelect.rs  LiveTheaterViewController.rs  Localize.rs  LowResolutionCamera.rs  LyricsController.rs  NowLoading.rs  PartsSingleModeSkillLearningListItem.rs  PartsSingleModeSkillListItem.rs  PaymentUtility.rs  RaceInfo.rs  RaceUtil.rs  SaveDataManager.rs  SceneManager.rs  Screen.rs  SingleModeStartResultCharaViewer.rs  SingleModeUtils.rs  StoryChoiceController.rs  StoryRaceTextAsset.rs  StoryTimelineBlockData.rs  StoryTimelineCharaTrackData.rs  StoryTimelineClipData.rs  StoryTimelineController.rs  StoryTimelineData.rs  StoryTimelineTrackData.rs  StoryViewController.rs  StoryViewTextControllerLandscape.rs  StoryViewTextControllerSingleMode.rs  TextCommon.rs  (+14 more)
src/il2cpp/hook/umamusume/DialogCommon/: Data.rs  mod.rs
src/il2cpp/hook/umamusume/MasterMissionData/: MissionData.rs  mod.rs
src/il2cpp/hook/umamusume/MasterSingleModeTurn/: SingleModeTurn.rs  mod.rs
src/il2cpp/hook/umamusume/MasterSkillData/: SkillData.rs  mod.rs
src/il2cpp/hook/umamusume/PartsSingleModeSkillLearningListItem/: Info.rs  mod.rs
src/il2cpp/hook/umamusume/StoryTimelineTextClipData/: ChoiceData.rs  ColorTextInfo.rs  mod.rs
src/il2cpp/wrapper/: array.rs  assembly.rs  bound_value.rs  class.rs  domain.rs  exception.rs  field.rs  image.rs  method.rs  mod.rs  native_pointer.rs  object.rs  pointer.rs  reference.rs  string.rs  type.rs  value.rs  value_type.rs
src/windows/: ffi.rs  game_impl.rs  hachimi_impl.rs  hook.rs  interceptor_impl.rs  libnative_hook.rs  log_impl.rs  main.rs  mod.rs  steamworks.rs  symbols_impl.rs  updater.rs  utils.rs  wnd_hook.rs
src/windows/gui_impl/: d3d11_backup.rs  d3d11_painter.rs  input.rs  input_hook.rs  mod.rs  render_hook.rs
src/windows/proxy/: cri_mana_vpx.rs  dxgi.rs  exports.def  mod.rs  opengl32.rs  unityplayer.rs  version.rs  winhttp.rs
tools/: README.md
tools/android/: README.md  build.sh  build_zygisk.sh  dev.sh  dev_nr.sh  dev_nr_no_split.sh  hachimi.sh
tools/android/zygisk-template/: customize.sh  module.prop
