[package]
name = "hachimi"
version = "0.1.3"
edition = "2021"

[lib]
name = "hachimi"
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
debug = "limited"

[dependencies]
log = "0.4"
cstr = "0.2"
once_cell = "1.19"
arc-swap = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fnv = "1.0"
widestring = "1.0"
egui = "0.26"
egui_minipng = "0.1"
sqlparser = "0.43"
dobby-rs = "0.1"
bwrap = { version = "1.3", features = ["use_std"] }
atomic_float = "0.1"
blake3 = "1.5"
ureq = "2.9"
size = "0.4"
threadpool = "1.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[patch.crates-io]
dobby-sys = { git = "https://github.com/LeadRDRK/dobby-sys.git" }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
android_logger = "0.13"
procfs = "0.16"
jni = "0.21"
egui_glow = "0.26"
glow = "0.13"